# httpfs-rs

./: Cargo.toml  README.md
src/: adapter.rs  fs.rs  main.rs
