[package]
name = "httpfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
ctrlc = "3.4.1"
exact-reader = { version = "0.1.2", path = "../exact-reader" }
fuser = "0.14.0"
libc = "0.2.150"
ureq = { version = "2.8.0", features = ["socks", "socks-proxy"] }
url = "2.4.1"
